Dynamically render and combine markers by zoom level - Converted marker rows to combinedMarkers, where marker rows are now contained in parent combinedRows with average coordinates - Refactored useState calls to useReducer, dispatch and renamed functions for readability - Updated SideBar and MapChart to use rows from combinedMarkers - Truncated combined institution names on map - Clicking on a table row highlights its sibling rows and map marker - Changed table row and marker highlight color to shade of default blue color - Changed base zoom threshold since label names not long enough at smaller threshold - Used more informative names for functions/variables and less destructuring - Made zoom controls into separate component - Made marker text with separate function call - Gave sidebar and map fixed % widths to prevent sidebar flickering - Refactored zoom/mouse movement handlers into constants file, some minor syntax changes - Make custom React components out of sidebar details - Minimized destructuring as much as possible for readability - Separate constants into config, functions, and types files - Refactored variable/function names and separate component for orphan table rows creation

--- a/src/index.css
+++ b/src/index.css
@@ -30,14 +30,14 @@ svg {
 
 .left {
   background-color: #f9f9f9;
-  flex: 3;
   align-self: stretch;
+  width: 30%;
 }
 
 .left h1 {
   font-size: 24px;
-  color: #3786c2 !important;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif !important;
+  color: #3786c2;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-weight: 500;
   line-height: 1.1;
   margin: 0.67em 0;
@@ -45,13 +45,8 @@ svg {
   padding-left: 20px;
 }
 
-.left p {
-  font-size: 20px;
-  margin-bottom: 60px !important;
-}
-
 .mapchart {
-  flex: 11;
+  width: 70%;
 }
 
 .controls-wrapper {
@@ -83,7 +78,7 @@ svg {
   overflow-y: auto;
   height: 20em;
 }
-.tableFixHead thead th {
+.waypoints thead th {
   position: sticky;
   top: 0;
 }
@@ -96,9 +91,6 @@ th,
 td {
   padding: 8px 16px;
 }
-th {
-  background: #eee;
-}
-.tableFixHead:first-child {
+.tableFixHead:first-of-type {
   margin-bottom: 2em;
 }
